<resources>
    <string name="app_name">Obstacles</string>
    <string name="fileprovider_authority" translatable="false">com.example.android.fileprovider</string>

    <string name="permission_camera_denied">The app cannot work without access to the camera, please grant it before proceeding.</string>
    <string name="permission_camera_rationale">The app requires access to the camera to function, please grant it to proceed.</string>
    <string name="permission_location_rationale">The app requires access to your location to function, please grant it to proceed.</string>
    <string name="permission_rationale_dialog_title">Permission required</string>

    <string name="button_edit_photo">Edit photo</string>
    <string name="button_show_more_types">More options…</string>
    <string name="button_sign_in">Sign in</string>

    <string name="account_fragment_title">Sign in to your account</string>

    <string name="label_fragment_obstacle_list">Obstacle Reporter</string>
    <string name="label_fragment_camera">Add new obstacle</string>
    <string name="label_fragment_obstacle_edit">Obstacle details</string>
    <string name="label_fragment_crop">Edit image</string>
    <string name="label_fragment_account">User account</string>
    <string name="label_fragment_settings">Settings</string>

    <string name="action_add_mock_element" translatable="false">Add mock obstacle</string>
    <string name="action_app_intro">Show App Intro</string>
    <string name="action_button_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm_crop_photo">Confirm</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_new_obstacle">New obstacle</string>
    <string name="action_rotate_photo">Rotate</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_test_server_connection" translatable="false">Test server connection</string>
    <string name="action_test_server_obstacle_input" translatable="false">Test inserting obstacle on server</string>
    <string name="action_toggle_camera_details">Toggle camera details</string>

    <string name="title_activity_about">Open source libraries</string>

    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_username" translatable="false">Username</string>
    <string name="hint_obstacle_type">Obstacle type</string>
    <string name="hint_specify_custom_type">Custom type</string>

    <string name="acra_crash_dialog_title">Obstacles app has crashed</string>
    <string name="acra_crash_input_prompt">You can add a comment here (optional):</string>
    <string name="acra_crash_message">Sorry, the application crashed. Please report the crash by clicking OK below (you\'ll be prompted to email a crash file to the developer).</string>

    <string name="setting_app_version_title">App version</string>
    <string name="setting_changelog_summary">Timeline of changes in the app</string>
    <string name="setting_changelog_title">Changelog</string>
    <string name="setting_open_source_libraries_summary">Links to the open source libraries used in this app</string>
    <string name="setting_open_source_libraries_title">Open source libraries</string>
    <string name="setting_uploads_category">Uploads</string>
    <string name="setting_allow_mobile_data_summary">May lead to increased data usage</string>
    <string name="setting_about_category">About</string>
    <string name="setting_allow_mobile_data">Allow uploads while on mobile data</string>
    <string name="setting_app_intro_title">App Intro</string>
    <string name="setting_app_intro_summary">Show initial introductory tutorial again</string>

    <string name="detail_accelerometer">Accelerometer: %1$s</string>
    <string name="detail_compass">Compass: %1$s</string>
    <string name="detail_location">Location: %1$s</string>
    <string name="detail_object_type">Type: %1$s</string>
    <string name="detail_orientation">Orientation: %1$s</string>

    <string name="detail_getting_accelerometer">Getting accelerometer…</string>
    <string name="detail_getting_compass">Getting compass…</string>
    <string name="detail_getting_location">Getting location…</string>
    <string name="detail_getting_orientation">Getting orientation…</string>

    <string name="dialog_delete_all_msg">This action is not reversible.</string>
    <string name="dialog_delete_all_positive">Delete</string>
    <string name="dialog_delete_all_title">Delete all obstacles?</string>

    <string name="dialog_discard_msg">The obstacle\'s photo will be deleted.</string>
    <string name="dialog_discard_positive">Discard</string>
    <string name="dialog_discard_title">Discard obstacle?</string>

    <string name="dialog_analysis_indicator_text">Analysing photo…</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_cnn_explanation">The 5 most likely types as determined by a neural
        network:</string>
    <string name="dialog_OK_button" translatable="false">OK</string>
    <string name="dialog_select_type_title">Select obstacle type</string>
    <string name="dialog_submitting_obstacle">Submitting obstacle…</string>

    <string name="error_type_not_selected">Please select obstacle type</string>
    <string name="error_type_not_valid">Please provide a valid type</string>

    <string name="toast_deleted_everything">Deleted everything</string>
    <string name="toast_error_saving_cropped">Error saving cropped photo, please try again</string>
    <string name="toast_location_required">Please select obstacle location on map</string>
    <string name="toast_make_selection">Please make a selection</string>
    <string name="toast_not_implemented">Not implemented yet</string>
    <string name="toast_obstacle_submitted">Obstacle submitted!</string>
    <string name="toast_provide_valid_type">Please provide a valid type</string>

    <string name="field_required">*Required</string>
    <string name="title_location_map">Location (long click on map to edit)</string>
    <string name="title_obstacle_photo">Obstacle photo</string>
    <string name="press_plus_to_report_obstacle">Press + to report an obstacle</string>

    <string name="preference_key_allow_mobile_data" translatable="false">allow_mobile_data</string>
    <string name="preference_key_app_version" translatable="false">key_app_version</string>
    <string name="preference_key_changelog" translatable="false">changelog</string>
    <string name="preference_key_open_source_libraries" translatable="false">open_source_libraries</string>
    <string name="preference_key_show_app_intro" translatable="false">appIntro</string>

    <string-array name="obstacle_types_array">
        <item>Advert. Sign</item>
        <item>Crack</item>
        <item>Hole/Pot-hole</item>
        <item>Paver (broken)</item>
        <item>Narrow Pavement</item>
        <item>No Pavement</item>
        <item>Bench</item>
        <item>Light</item>
        <item>Bin</item>
        <item>Parking Meter</item>
        <item>Plant Pot</item>
        <item>Tree</item>
        <item>Shrub</item>
        <item>Parking Prevention Barrier</item>
        <item>Mail Box</item>
        <item>4 wheel - Vehicle</item>
        <item>2 wheel - Motorbike</item>
        <item>Boulder</item>
        <item>Safety Sign</item>
        <item>Fence</item>
        <item>Traffic Cone</item>
        <item>Litter</item>
        <item>Chair</item>
        <item>Table</item>
    </string-array>
</resources>
