<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SettingsFragment">

    <PreferenceCategory android:title="@string/setting_uploads_category">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="allow_mobile_data"
            app:singleLineTitle="false"
            app:title="@string/setting_allow_mobile_data" />
        <!--TODO set summary warning only when setting is on-->
        <!--app:summary="@string/setting_allow_mobile_data_summary"-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_about_category">
        <Preference
            app:key="changelog"
            app:summary="@string/setting_changelog_summary"
            app:title="@string/setting_changelog_title" />
        <Preference
            app:key="open_source_libraries"
            app:summary="@string/setting_open_source_libraries_summary"
            app:title="@string/setting_open_source_libraries_title" />
        <Preference
            app:key="version"
            app:title="@string/setting_app_version_title"
            tools:summary="1.0.0" />
    </PreferenceCategory>
</PreferenceScreen>
