<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/obstacleListFragment">

    <fragment
        android:id="@+id/obstacleListFragment"
        android:name="cy.org.rise.obsai.ui.ObstacleListFragment"
        android:label="@string/label_fragment_obstacle_list"
        tools:layout="@layout/fragment_obstacle_list">
        <action
            android:id="@+id/action_obstacleListFragment_to_cameraFragment"
            app:destination="@id/cameraFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_obstacleListFragment_to_accountFragment"
            app:destination="@id/accountFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_obstacleListFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/cameraFragment"
        android:name="cy.org.rise.obsai.ui.CameraFragment"
        android:label="@string/label_fragment_camera"
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/action_cameraFragment_to_obstacleEditFragment"
            app:destination="@id/obstacleEditFragment"
            app:popUpTo="@id/obstacleListFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/obstacleEditFragment"
        android:name="cy.org.rise.obsai.ui.ObstacleEditFragment"
        android:label="@string/label_fragment_obstacle_edit"
        tools:layout="@layout/fragment_obstacle_edit">
        <action
            android:id="@+id/action_obstacleEditFragment_to_obstacleListFragment"
            app:destination="@id/obstacleListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@+id/obstacleListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_obstacleEditFragment_to_cropFragment"
            app:destination="@id/cropFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <argument
            android:name="currentObstacle"
            app:argType="cy.org.rise.obsai.db.Obstacle" />
    </fragment>
    <fragment
        android:id="@+id/cropFragment"
        android:name="cy.org.rise.obsai.ui.CropFragment"
        android:label="@string/label_fragment_crop"
        tools:layout="@layout/fragment_crop">
        <action
            android:id="@+id/action_cropFragment_to_obstacleEditFragment"
            app:destination="@id/obstacleEditFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@+id/obstacleEditFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="currentObstacle"
            app:argType="cy.org.rise.obsai.db.Obstacle" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="cy.org.rise.obsai.ui.AccountFragment"
        android:label="@string/label_fragment_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="cy.org.rise.obsai.ui.SettingsFragment"
        android:label="@string/label_fragment_settings"
        tools:layout="@xml/preferences" />
</navigation>