<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/example_obs_20190808_102427129"
    tools:context=".ui.CameraFragment">

    <!-- app:cameraExperimental="true" in CameraView below enforces use of Camera2, which should
    be available in all devices with SDK >= 21, which is the minimum for the app -->

    <!-- for setting camera to take square photos-->
    <!-- app:cameraPictureSizeAspectRatio="1:1"
            app:cameraPictureSizeBiggest="true"
            app:cameraPictureSizeMaxArea="50000000"
            app:cameraPictureSizeMaxHeight="3000"
            app:cameraPictureSizeMaxWidth="3000"
            app:cameraPictureSizeMinArea="10000000"
            app:cameraPictureSizeMinHeight="100"
            app:cameraPictureSizeMinWidth="100"-->

    <com.otaliastudios.cameraview.CameraView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:cameraAudio="off"
        app:cameraEngine="camera2"
        app:cameraExperimental="true"
        app:cameraFacing="back"
        app:cameraFlash="auto"
        app:cameraGestureLongTap="none"
        app:cameraGesturePinch="zoom"
        app:cameraGestureTap="autoFocus"
        app:cameraGrid="off"
        app:cameraMode="picture"
        app:cameraPlaySounds="false"
        app:cameraPreview="glSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/camera_button" />

    <LinearLayout
        android:id="@+id/photo_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBlackTransparent"
        android:backgroundTintMode="screen"
        android:orientation="vertical"
        android:padding="@dimen/margin_small"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tiny"
            android:text="@string/detail_getting_location"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tiny"
            android:text="@string/detail_getting_accelerometer"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/compass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tiny"
            android:text="@string/detail_getting_compass"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tiny"
            android:text="@string/detail_getting_orientation"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
